Fixed spacing on project cards & centered section titles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,11 +13,10 @@ body {
 	font-family: "Poppins", sans-serif;
 }
 
-/* a {
-	color: inherit;
-	text-decoration: none;
-} */
-
 * {
 	box-sizing: border-box;
+}
+
+.section-title {
+	text-align: center;
 }
