--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,7 +1,6 @@
 .projects_section {
 	padding: 5rem 2rem 5rem 2rem;
 	margin: 5rem 0 5rem 0;
-	/* min-height: 100vh; */
 }
 
 .projects_deck {
@@ -14,6 +13,8 @@
 
 .project_card {
 	display: flex;
+	row-gap: 0;
+	column-gap: 0;
 	padding: 0.5em;
 	width: 100%;
 	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -21,15 +22,15 @@
 
 .project-img {
 	float: left;
-	min-height: 350px;
+	min-height: auto;
 	width: 100%;
 	object-fit: scale-down;
+	padding: 1em;
 }
 
 .project_details {
 	display: flex;
 	flex-direction: column;
-	row-gap: 0;
 	background-color: #fff;
 	padding: 1em;
 	width: 100%;
